@@ -29,6 +29,12 @@ Changes in version 0.2.0.1-alpha - 2007-??-??
       in the network. Implements proposal 107, suggested by Kevin Bauer
       and Damon McCoy.
 
+  o Crash fixes:
+    - If a directory server runs out of space in the connection table
+      as it's processing a begin_dir request, it will free the exit stream
+      but leave it attached to the circuit, leading to unpredictable
+      behavior. (Reported by seeess, fixes bug 425.)
+
   o Minor fixes (resource management):
     - Count the number of open sockets separately from the number of active
       connection_t objects.  This will let us avoid underusing our
@@ -40,8 +46,8 @@ Changes in version 0.2.0.1-alpha - 2007-??-??
       the server), and avoids the nasty Windows socketpair() workaround.
     - Keep unused 4k and 16k buffers on free lists, rather than wasting 8k
       for every single inactive connection_t.
-    - Free items from the 4/16k-buffer free lists when they haven't been used
-      for a while.
+    - Free items from the 4k/16k-buffer free lists when they haven't been
+      used for a while.
 
   o Minor features (build):
     - Make autoconf search for libevent, openssl, and zlib consistently.
